2013-02-07  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/isinfd128.c (__isinfd128): Refactor using generic code.
	* ieee754r/isinfd32.c (__isinfd32): Likewise.
	* ieee754r/isinfd64.c (__isinfd64): Likewise.
	* sysdeps/generic/math_private.h (DEC128_INF_MASK64): New define:
	_Decimal128 Inf mask.
	(DEC64_INF_MASK64): New define: _Decimal64 Inf mask.
	(DEC32_INF_MASK): New define: _Decimal32 Inf mask.

2013-02-07  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/isnand128.c (__isnand128): Refactor using generic code.
	* ieee754r/isnand32.c (__isnand32): Likewise.
	* ieee754r/isnand64.c (__isnand64): Likewise.
	* sysdeps/generic/math_private.h (DEC128_NAN_MASK64): New define:
	_Decimal128 NaN mask.
	(DEC64_NAN_MASK64): New define: _Decimal64 NaN mask.
	(DEC32_NAN_MASK): New define: _Decimal32 NaN mask.

2013-02-06  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-bfp-conversions.c (sfdd_tests): Fix expected conversion
	value.
	(sftd_tests): Likewise.
	(dftd_tests): Likewise.

2013-02-06  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* config/dfp.m4: New file: m4 macro to select the decimal floating
	point format.
	* libdecnumber/Makefile.in: Update from GCC.
	* libdecnumber/aclocal.m4: Likewise.
	* libdecnumber/bid/bid-dpd.h: Likewise.
	* libdecnumber/bid/bid2dpd_dpd2bid.c: Likewise.
	* libdecnumber/bid/bid2dpd_dpd2bid.h: Likewise.
	* libdecnumber/bid/decimal128.c: Likewise.
	* libdecnumber/bid/decimal32.c: Likewise.
	* libdecnumber/bid/decimal64.c: Likewise.
	* libdecnumber/bid/host-ieee128.c: Likewise.
	* libdecnumber/bid/host-ieee32.c: Likewise.
	* libdecnumber/bid/host-ieee64.c: Likewise.
	* libdecnumber/config.in: Likewise.
	* libdecnumber/configure: Likewise.
	* libdecnumber/configure.ac: Likewise.
	* libdecnumber/dconfig.h: Likewise.
	* libdecnumber/decBasic.c: Likewise.
	* libdecnumber/decCommon.c: Likewise.
	* libdecnumber/decCommonSymbols.h:: Likewise.
	* libdecnumber/decContext.c: Likewise.